# JBL

./: .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json
.github/workflows/: CMake_build_Linux_x64_debug.yml  CMake_build_MSVC.yml  CMake_build_MinGW.yml  CMake_build_Win.yml  CMake_build_Win_x64_debug.yml  build_master.yml
cmake/: JBLVersion.cmake
cmake/toolchains/: linux.cmake  win.cmake  win2k.cmake  win7_8_10_11.cmake  win9x.cmake  winxp.cmake
dlljbl/: CMakeLists.txt
dlljbl/src/: jbl.cpp  jbl.h  lib.cpp  lib.h  version.h  version.rc.in
dlljbl/src/string/: jblstring.cpp  jblstring.h
dlljbltest/: CMakeLists.txt
dlljbltest/src/: main.cpp
dlljbltest/src/string/: jblstring.test.cpp
legacyTest/: CMakeLists.txt
legacyTest/src/: main.cpp
